--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^19.2.9",
+    "ink-testing-library": "^4.0.0",
     "typescript": "^5.3.0",
     "vitest": "^4.0.17"
   },
